# rust-individual-project-1

./: Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: build.yml  publish.yml  release.yml
benches/: sorting_benchmark.rs
src/: lib.rs  main.rs
